--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^9.65.5",
     "@react-three/fiber": "^8.12.2",
     "@types/node": "18.15.3",
     "@types/react": "18.0.28",
@@ -22,6 +23,7 @@
     "qrcode.react": "^3.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-qr-reader": "^3.0.0-beta-1",
     "react-three-fiber": "^6.0.13",
     "tailwindcss": "^3.2.7",
     "three": "^0.151.3",
