--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "react-dom": "18.2.0",
     "react-qr-reader": "^3.0.0-beta-1",
     "react-three-fiber": "^6.0.13",
+    "react-toastify": "^9.1.2",
     "tailwindcss": "^3.2.7",
     "three": "^0.151.3",
     "typescript": "5.0.2",
+    "web3": "^1.9.0",
     "zustand": "^4.3.7"
   }
 }
